--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "scotch-player",
-  "productName":"Scotch Player",
+  "productName": "Scotch Player",
   "version": "1.0.0",
   "description": "Scotch Demo Player",
   "main": "main.js",
   "scripts": {
     "test": "npm test",
-    "start": "electron main.js",
-    "watch": "watchify app/app.js -t babelify -o public/js/bundle.js --debug --verbose"
+    "start": "electron .",
+    "dev react": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "build": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -24,18 +25,24 @@
   },
   "homepage": "https://github.com/christiannwamba/scotch-player#readme",
   "dependencies": {
-    "axios": "^0.9.1",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babelify": "^7.2.0",
+    "axios": "^0.15.3",
     "classnames": "^2.2.3",
-    "electron-prebuilt": "^0.36.0",
-    "electron-reload": "^0.2.0",
-    "jquery": "^2.2.3",
-    "react": "^0.14.8",
+    "jquery": "^3.1.1",
+    "react": "^15.4.2",
     "react-autocomplete": "^1.0.0-rc2",
-    "react-dom": "^0.14.7",
-    "react-sound": "^0.4.0",
+    "react-dom": "^15.4.2",
+    "react-sound": "^0.5.2",
     "soundmanager2": "^2.97.20150601-a"
+  },
+  "devDependencies": {
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-latest": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "electron": "^1.6.1",
+    "electron-packager": "^8.5.2",
+    "font-awesome": "^4.7.0",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1"
   }
 }
