[Redux] Use redux

--- a/package.json
+++ b/package.json
@@ -32,14 +32,19 @@
     "react": "^15.4.2",
     "react-autocomplete": "^1.0.0-rc2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
     "react-sound": "^0.5.2",
+    "redux": "^3.6.0",
+    "redux-promise": "^0.5.3",
     "soundmanager2": "^2.97.20150601-a"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "bootstrap": "^3.3.7",
     "electron": "^1.6.1",
     "electron-packager": "^8.5.2",
     "font-awesome": "^4.7.0",
