--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react-redux": "^5.0.3",
     "react-sound": "^0.5.2",
     "redux": "^3.6.0",
+    "redux-logger": "^2.8.2",
     "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0",
     "soundmanager2": "^2.97.20150601-a"
   },
   "devDependencies": {
