--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-redux": "^5.0.3",
     "react-sound": "^0.5.2",
     "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.0",
     "redux-logger": "^2.8.2",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
