--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.15.3",
     "classnames": "^2.2.3",
     "jquery": "^3.1.1",
+    "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-autocomplete": "^1.0.0-rc2",
     "react-dom": "^15.4.2",
